<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_hint"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/llFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rvCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/etMinPrice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:hint="@string/min_price"
                android:background="@drawable/bg_auth_text_field"
                android:padding="8dp"
                android:autofillHints="off"/>

            <EditText
                android:id="@+id/etMaxPrice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:hint="@string/max_price"
                android:background="@drawable/bg_auth_text_field"
                android:padding="8dp"
                android:layout_marginStart="6dp"
                android:autofillHints="off"/>

            <Button
                android:id="@+id/btnSortAsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_price_asc"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginStart="6dp"
                android:minWidth="0dp"
                android:paddingHorizontal="10dp"
                app:backgroundTint="@null"
                android:background="@drawable/bg_auth_button"/>

            <Button
                android:id="@+id/btnSortDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_price_desc"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginStart="6dp"
                android:minWidth="0dp"
                android:paddingHorizontal="10dp"
                app:backgroundTint="@null"
                android:background="@drawable/bg_auth_button"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/llFilter"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>