<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/bg_product_gradient">

    <ImageView
        android:id="@+id/ivMyProduct"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="fitCenter"
        android:background="@android:color/white"
        android:padding="2dp"
        android:contentDescription="@string/product_title"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/tvMyProductTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:maxLines="2"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tvMyProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="2dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnEditProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:background="@drawable/bg_auth_button"/>

    <Button
        android:id="@+id/btnDeleteProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_marginStart="4dp"
        app:backgroundTint="@null"
        android:background="@drawable/bg_signout_button"/>

</LinearLayout>
