<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="email"
            type="String" />
        <variable
            name="username"
            type="String" />
        <variable
            name="role"
            type="String" />
        <variable
            name="profileFragment"
            type="com.shopping.app.ui.main.profile.ProfileFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_profile"
                android:background="@drawable/bg_arrow_back"
                android:padding="1dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/main_color"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:text="@{username}"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/main_color"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@{email}"/>

            <TextView
                android:id="@+id/tvRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:text="@{`Role: ` + role}"/>

            <Button
                android:id="@+id/btnMyProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_auth_button"
                android:text="@string/my_products"
                android:textColor="@color/white"
                android:visibility="gone"
                app:backgroundTint="@null"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:onClick="@{v -> profileFragment.goMyProducts()}"/>

            <Button
                android:id="@+id/btnOrders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_auth_button"
                android:text="@string/my_orders"
                android:textColor="@color/white"
                app:backgroundTint="@null"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:onClick="@{v -> profileFragment.goOrders()}"/>

            <Button
                android:id="@+id/btnMessages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_auth_button"
                android:text="@string/my_messages"
                android:textColor="@color/white"
                app:backgroundTint="@null"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:onClick="@{v -> profileFragment.goMessages()}"/>

            <Button
                android:id="@+id/btnAdminPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_auth_button"
                android:text="@string/admin_panel"
                android:textColor="@color/white"
                android:visibility="gone"
                app:backgroundTint="@null"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:onClick="@{v -> profileFragment.goAdminPanel()}"/>

            <Button
                android:id="@+id/btnSignOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_signout_button"
                android:text="@string/sign_out"
                android:textColor="@color/white"
                app:backgroundTint="@null"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:onClick="@{v -> profileFragment.signOutDialog()}"/>

        </LinearLayout>

    </ScrollView>

</layout>